--- a/coursera-assignment-1/index.html
+++ b/coursera-assignment-1/index.html
@@ -13,7 +13,7 @@
         <div class="row row-1">
                 <h3 class="row1">Chicken</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo dignissimos, impedit harum minus dolore voluptatibus, autem similique officia amet delectus iste iure possimus deleniti ipsum aspernatur voluptates provident reprehenderit est obcaecati tempore modi aut! Eum officiis iusto, voluptas, vitae eveniet explicabo, quibusdam consequuntur obcaecati provident expedita ipsum ex? Nulla, eum.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo dignissimos, impedit harum minus dolore voluptatibus, autem similique officia amet delectus iste iure possimus deleniti ipsum aspernatur voluptates provident reprehenderit est obcaecati tempore modi aut! Eum officiis iusto, voluptas, vitae eveniet explicabo, quibusdam consequuntur obcaecati provident expedita ipsum ex? Nulla, eum
                 </p>
         </div>
 
