--- a/zuriIT/responsive/index.html
+++ b/zuriIT/responsive/index.html
@@ -19,20 +19,25 @@
       </div>
 
       <div class="other-side">
-        <button><span>Try it free 7 days</span> then $20/mo.thereafter</button>
+        <button class="button">
+          <span>Try it free 7 days</span> then $20/mo.thereafter
+        </button>
         <div class="form">
           <form action="">
-            <input type="text" placeholder="First Name" /><br>
-            <input type="text" placeholder="Last Name" /><br><input
+            <input type="text" placeholder="First Name" /><br />
+            <input type="text" placeholder="Last Name" /><br /><input
               type="email"
               placeholder="Email Address"
-            /><br> <input type="password" placeholder="Password" />
+            /><br />
+            <input type="password" placeholder="Password" />
           </form>
-          <button>CLAIM YOUR FREE TRIAL</button>
-          <p>
-            By clicking the button, you are agreeing to our
-            <span>Terms and Services</span>
-          </p>
+          <button class="but">CLAIM YOUR FREE TRIAL</button>
+          <div class="term">
+            <p>
+              By clicking the button, you are agreeing to our
+              <span>Terms and Services</span>
+            </p>
+          </div>
         </div>
       </div>
     </main>
