commit new psd design

--- a/new_psd_design/index.html
+++ b/new_psd_design/index.html
@@ -19,10 +19,10 @@
         </div>
         <div class="navbar">
           <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">MENU</a></li>
-            <li><a href="">OUR STORY</a></li>
-            <li><a href="">CONTACT US</a></li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">MENU</a></li>
+            <li><a href="#">OUR STORY</a></li>
+            <li><a href="#">CONTACT US</a></li>
           </ul>
         </div>
       </div>
@@ -149,12 +149,12 @@
       
       <div class="input"> 
 
-        <input type="text" value="NAME">
-        <input type="text" value="DATE">
-        <input type="text" value="PEOPLE">
-        <input type="text" value="EMAIL">
-        <input type="text" value="TIME">
-        <input type="text" value="FIND A TABLE" id="red">   
+        <input type="text" placeholder="NAME">
+        <input type="date" placeholder="DATE">
+        <input type="text" placeholder="PEOPLE">
+        <input type="email" placeholder="EMAIL">
+        <input type="time" placeholder="TIME">
+        <input type="text" placeholder="FIND A TABLE" id="red">   
       </div>
 
       </form>
