adjusted form button

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -347,7 +347,7 @@
 
         <div class="row m-0">
             <div class="col-md-12 p-0 pt-4 m-auto">
-                <form action="#" class="bg-light p-4.m-auto"><div class="row">
+                <form action="#" class="bg-light p-4 m-auto"><div class="row">
                     <div class="col-md-12">
                         <div class="mb-3">
                             <input type="text" class="form-control" required placeholder="Your Full name">
@@ -364,7 +364,7 @@
                         </div>
                     </div>
 
-                    <button class="btn btn-warning btn-lg btn-block mt-3">Send Now</button>
+                    <button class="btn  btn-warning btn-lg btn-block mt-3">Send Now</button>
                 </div>
             </form>
             </div>
